# examples

./: .gitignore
wiieva-intro/: CMakeLists.txt  wiieva-intro.cpp
wiieva-intro/gui/: fix.sh  gui_exec.h  gui_helpers.c  gui_helpers.h  gui_router.c  gui_router.h  wiieva.ugfx  win_browsefile.c  win_browsefile.h  win_mainmenu.c  win_mainmenu.h  win_recognizer.c  win_recognizer.h  win_remote.c  win_remote.h  win_weather.c  win_weather.h  win_wifisettings.c  win_wifisettings.h
wiieva-intro/gui/icons/: bmp.sh
wiieva-intro/gui/output/: gfxconf.h  gui.c  gui.h  main_sample.c  romfs_files.h  widgetstyles.h
wiieva-intro/gui/output/rsc/: DejaVuSans10.c  DejaVuSans16.c  back.h  batt_full_chg.h  file_mp3.h  file_reg.h  folder.h  gear.h  menu.h  mic.h  music.h  remote.h  volume.h  weath_humidity.h  weath_pressure.h  weath_temp.h  weather.h  wifi_full.h
wiieva-intro/gui/simulator/: CMakeLists.txt  gui_simulator.c
